[package]
name = "auto-bigint"
version = "0.1.0"
authors = ["VillSnow <vill.snow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-bigint = "0.4"
num = { version = "0.4", optional = true }
